src/test/deca/context/invalid/testPrintNoArgs.deca
// Description : print sans arguments
{
    println();
}
